@@ -1,7 +1,6 @@
 package de.medizininformatik_initiative.process.data_sharing;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -14,7 +13,7 @@ import dev.dsf.bpe.v1.ProcessPluginDefinition;
 public class DataSharingProcessPluginDefinition implements ProcessPluginDefinition
 {
 	public static final String VERSION = "1.0.0.0";
-	public static final LocalDate RELEASE_DATE = LocalDate.of(2023, 9, 13);
+	public static final LocalDate RELEASE_DATE = LocalDate.of(2024, 6, 11);
 
 	@Override
 	public String getName()
@@ -62,10 +61,12 @@ public class DataSharingProcessPluginDefinition implements ProcessPluginDefiniti
 
 		var nPrId = "fhir/NamingSystem/mii-project-identifier.xml";
 
+		var qReCon = "fhir/Questionnaire/questionnaire-release-consolidate-data-sets.xml";
 		var qReExe = "fhir/Questionnaire/questionnaire-release-data-set.xml";
 		var qReMer = "fhir/Questionnaire/questionnaire-release-merged-data-set.xml";
 
 		var sEmedId = "fhir/StructureDefinition/extension-dic-identifier.xml";
+		var sTcon = "fhir/StructureDefinition/task-consolidate-data-sets.xml";
 		var sTcoo = "fhir/StructureDefinition/task-coordinate-data-sharing.xml";
 		var sTexe = "fhir/StructureDefinition/task-execute-data-sharing.xml";
 		var sTmer = "fhir/StructureDefinition/task-merge-data-sharing.xml";
@@ -73,6 +74,7 @@ public class DataSharingProcessPluginDefinition implements ProcessPluginDefiniti
 		var sTsenMer = "fhir/StructureDefinition/task-merged-data-set.xml";
 		var sTsenRecHrp = "fhir/StructureDefinition/task-received-data-set.xml";
 		var sTsenRecDic = "fhir/StructureDefinition/task-status-data-set.xml";
+		var sTstExe = "fhir/StructureDefinition/task-stop-execute-data-sharing.xml";
 
 		var tCoo = "fhir/Task/task-coordinate-data-sharing.xml";
 
@@ -83,11 +85,12 @@ public class DataSharingProcessPluginDefinition implements ProcessPluginDefiniti
 
 		return Map.of( //
 				ConstantsDataSharing.PROCESS_NAME_FULL_COORDINATE_DATA_SHARING, //
-				Arrays.asList(aCoo, cDaSh, nPrId, sTcoo, sTsenMer, sTsenRecHrp, tCoo, vDaSh), //
+				List.of(aCoo, cDaSh, nPrId, qReCon, sTcoo, sTsenMer, sTsenRecHrp, tCoo, vDaSh), //
 				ConstantsDataSharing.PROCESS_NAME_FULL_EXECUTE_DATA_SHARING, //
-				Arrays.asList(aExe, cDaSeSt, cDaSh, eDaSeStEr, nPrId, qReExe, sTexe, sTsenRecDic, vDaSeStSe, vDaSh), //
+				List.of(aExe, cDaSeSt, cDaSh, eDaSeStEr, nPrId, qReExe, sTexe, sTsenRecDic, sTstExe, vDaSeStSe, //
+						vDaSh), //
 				ConstantsDataSharing.PROCESS_NAME_FULL_MERGE_DATA_SHARING, //
-				Arrays.asList(aMer, cDaSeSt, cCrypto, cDaSh, eDaSeStEr, nPrId, qReMer, sEmedId, sTmer, sTsen, vCrypto,
-						vDaSeStRe, vDaSh));
+				List.of(aMer, cDaSeSt, cCrypto, cDaSh, eDaSeStEr, nPrId, qReMer, sEmedId, sTcon, sTmer, sTsen, //
+						vCrypto, vDaSeStRe, vDaSh));
 	}
 }
